--- a/src/components/Busqueda/Busqueda.module.css
+++ b/src/components/Busqueda/Busqueda.module.css
@@ -1,17 +1,72 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-
-.busqueda{
-    border: solid 1px;
-    display: flex;
-    justify-content: center;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-.autocompletacion{
-  background-color: blue;
-  height: 300PX;
-  width: 200px;
+.App {
+	font-family: sans-serif;
+	text-align: center;
+	margin-top: 10px;
+}
+
+.autocompletacion {
+	background-color: rgb(74, 30, 227);
+	height: 240px;
+	width: 190px;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	border-radius: 0 0 30px 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border: solid 3px;
+	
+
+	/* TROUBLE
+	TRBL
+	top right bottom left */
+}
+
+.autocompletacion p {
+	font-size: 20px;
+	/* text-decoration: underline; */
+	color: white;
+	cursor: pointer;
+	transition: all 0.2s;
+	margin: 10px 0;
+	/* border: 1px solid white; */
+	width: 110px;
+	display: flex;
+	justify-content: center;
+}
+
+.autocompletacion p:hover {
+	color:white;
+	transform: scale(1.3);
+	text-transform: uppercase;
+
+}
+
+input {
+	padding: 10px;
+	border: 2px solid rgb(74, 30, 227);
+	border-radius: 30px 0 0 30px;
+	width: 200px;
+	position: relative;
+}
+
+button {
+	background-color:white;
+	color: white;
+	padding: 10px;
+	border-radius: 0px 30px 30px 0px;
+}
+.lupa{
+  fill: white;
+  color: white;
+  width: 12px;
+
 }
