--- a/src/components/Busqueda/Busqueda.module.css
+++ b/src/components/Busqueda/Busqueda.module.css
@@ -14,6 +14,7 @@
 	background-color: rgb(74, 30, 227);
 	height: 240px;
 	width: 190px;
+	/* width: 190px; */
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
@@ -54,7 +55,7 @@ input {
 	padding: 10px;
 	border: 2px solid rgb(74, 30, 227);
 	border-radius: 30px 0 0 30px;
-	width: 200px;
+	width: 440px;
 	position: relative;
 }
 
@@ -73,4 +74,15 @@ button {
 .imagen{
 	height: 100px;
 	width: 100px;
+}
+
+.anonimo{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+form{
+	margin-top: -10px;
 }
