--- a/src/components/resultado/Resultado.module.css
+++ b/src/components/resultado/Resultado.module.css
@@ -6,3 +6,17 @@
     flex-wrap: wrap;
     
 }
+.titulo{
+    display: flex;
+    flex-direction: column;
+    color:#572EE5;
+}
+h3{
+    margin-top: 20px;
+    font-family: Arial;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+}
