--- a/src/components/Busqueda/Busqueda.module.css
+++ b/src/components/Busqueda/Busqueda.module.css
@@ -11,19 +11,19 @@
 }
 
 .autocompletacion {
-	background-color: rgb(74, 30, 227);
+	background-color: white;
 	height: 240px;
-	width: 190px;
-	/* width: 190px; */
+	width: 406px;
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
-	border-radius: 0 0 30px 30px;
+	border-radius: 0 0 30px 30px ;
+	
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	border: solid 3px;
+	border: solid 2px rgb(74, 30, 227);;
 	
 
 	/* TROUBLE
@@ -34,20 +34,25 @@
 .autocompletacion p {
 	font-size: 20px;
 	/* text-decoration: underline; */
-	color: white;
+	color: rgb(74, 30, 227);
 	cursor: pointer;
 	transition: all 0.2s;
 	margin: 10px 0;
 	/* border: 1px solid white; */
-	width: 110px;
+	width: 310px;
 	display: flex;
 	justify-content: center;
+	border-radius: 5px;
+
+	
 }
 
 .autocompletacion p:hover {
-	color:white;
+	color:rgb(74, 30, 227);
 	transform: scale(1.3);
 	text-transform: uppercase;
+	border: solid 1px rgb(74, 30, 227);
+	
 
 }
 
